@@ -4,6 +4,7 @@ Release 0.20.0 - Unreleased
 
   BUG FIXES
    HBASE-1140  "ant clean test" fails (Nitay Joffe via Stack)
+   HBASE-1129  Master won't go down; stuck joined on rootScanner
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
